--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link href="layout.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
+    <title>What Can We Use?</title>
+  </head>
 </html>
